@@ -1,5 +1,6 @@
 /*
- * Copyright (c) 2020, Red Hat Inc.
+ * Copyright (c) 2020, 2022, Red Hat Inc.
+ * Copyright (c) 2024, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -27,26 +28,25 @@ package jdk.internal.platform.cgroupv2;
 
 import java.io.IOException;
 import java.io.UncheckedIOException;
-import java.nio.file.Paths;
-import java.util.List;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.util.concurrent.TimeUnit;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
+import jdk.internal.platform.CgroupInfo;
 import jdk.internal.platform.CgroupSubsystem;
 import jdk.internal.platform.CgroupSubsystemController;
-import jdk.internal.platform.CgroupUtil;
 
 public class CgroupV2Subsystem implements CgroupSubsystem {
 
-    private static final CgroupV2Subsystem INSTANCE = initSubsystem();
+    private static volatile CgroupV2Subsystem INSTANCE;
     private static final long[] LONG_ARRAY_NOT_SUPPORTED = null;
     private static final int[] INT_ARRAY_UNAVAILABLE = null;
     private final CgroupSubsystemController unified;
     private static final String PROVIDER_NAME = "cgroupv2";
     private static final int PER_CPU_SHARES = 1024;
-    private static final String MAX_VAL = "max";
     private static final Object EMPTY_STR = "";
     private static final long NO_SWAP = 0;
 
@@ -65,48 +65,29 @@ public class CgroupV2Subsystem implements CgroupSubsystem {
         return getLongVal(file, CgroupSubsystem.LONG_RETVAL_UNLIMITED);
     }
 
-    private static CgroupV2Subsystem initSubsystem() {
-        // read mountinfo so as to determine root mount path
-        String mountPath = null;
-        try (Stream<String> lines =
-                CgroupUtil.readFilePrivileged(Paths.get("/proc/self/mountinfo"))) {
-
-            String l = lines.filter(line -> line.contains(" - cgroup2 "))
-                            .collect(Collectors.joining());
-            String[] tokens = l.split(" ");
-            mountPath = tokens[4];
-        } catch (UncheckedIOException e) {
-            return null;
-        } catch (IOException e) {
-            return null;
-        }
-        String cgroupPath = null;
-        try {
-            List<String> lines = CgroupUtil.readAllLinesPrivileged(Paths.get("/proc/self/cgroup"));
-            for (String line: lines) {
-                String[] tokens = line.split(":");
-                if (tokens.length != 3) {
-                    return null; // something is not right.
+    /**
+     * Get the singleton instance of a cgroups v2 subsystem. On initialization,
+     * a new object from the given cgroup information 'anyController' is being
+     * created. Note that the cgroup information has been parsed from cgroup
+     * interface files ahead of time.
+     *
+     * See CgroupSubsystemFactory.determineType() for the cgroup interface
+     * files parsing logic.
+     *
+     * @return A singleton CgroupSubsystem instance, never null.
+     */
+    public static CgroupSubsystem getInstance(CgroupInfo anyController) {
+        if (INSTANCE == null) {
+            CgroupSubsystemController unified = new CgroupV2SubsystemController(
+                    anyController.getMountPoint(),
+                    anyController.getCgroupPath());
+            CgroupV2Subsystem tmpCgroupSystem = new CgroupV2Subsystem(unified);
+            synchronized (CgroupV2Subsystem.class) {
+                if (INSTANCE == null) {
+                    INSTANCE = tmpCgroupSystem;
                 }
-                if (!"0".equals(tokens[0])) {
-                    // hierarchy must be zero for cgroups v2
-                    return null;
-                }
-                cgroupPath = tokens[2];
-                break;
             }
-        } catch (UncheckedIOException e) {
-            return null;
-        } catch (IOException e) {
-            return null;
         }
-        CgroupSubsystemController unified = new CgroupV2SubsystemController(
-                mountPath,
-                cgroupPath);
-        return new CgroupV2Subsystem(unified);
-    }
-
-    public static CgroupSubsystem getInstance() {
         return INSTANCE;
     }
 
@@ -169,35 +150,45 @@ public class CgroupV2Subsystem implements CgroupSubsystem {
             return CgroupSubsystem.LONG_RETVAL_UNLIMITED;
         }
         String quota = tokens[tokenIdx];
-        return limitFromString(quota);
-    }
-
-    private long limitFromString(String strVal) {
-        if (strVal == null || MAX_VAL.equals(strVal)) {
-            return CgroupSubsystem.LONG_RETVAL_UNLIMITED;
-        }
-        return Long.parseLong(strVal);
+        return CgroupSubsystem.limitFromString(quota);
     }
 
     @Override
     public long getCpuShares() {
         long sharesRaw = getLongVal("cpu.weight");
-        if (sharesRaw == 100 || sharesRaw <= 0) {
+        // cg v2 value must be in range [1,10000]
+        if (sharesRaw == 100 || sharesRaw <= 0 || sharesRaw > 10000) {
             return CgroupSubsystem.LONG_RETVAL_UNLIMITED;
         }
         int shares = (int)sharesRaw;
         // CPU shares (OCI) value needs to get translated into
         // a proper Cgroups v2 value. See:
-        // https://github.com/containers/crun/blob/master/crun.1.md#cpu-controller
+        // https://github.com/containers/crun/blob/1.24/crun.1.md#cpu-controller
         //
         // Use the inverse of (x == OCI value, y == cgroupsv2 value):
-        // ((262142 * y - 1)/9999) + 2 = x
+        // y = 10^(log2(x)^2/612 + 125/612 * log2(x) - 7.0/34.0)
         //
-        int x = 262142 * shares - 1;
-        double frac = x/9999.0;
-        x = ((int)frac) + 2;
+        // By re-arranging it to the standard quadratic form:
+        // log2(x)^2 + 125 * log2(x) - (126 + 612 * log_10(y)) = 0
+        //
+        // Therefore, log2(x) = (-125 + sqrt( 125^2 - 4 * (-(126 + 612 * log_10(y)))))/2
+        //
+        // As a result we have the inverse (we can discount substraction of the
+        // square root value since those values result in very small numbers and the
+        // cpu shares values - OCI - are in range [2-262144])
+        //
+        // x = 2^((-125 + sqrt(16129 + 2448* log10(y)))/2)
+        //
+        double logMultiplicand = Math.log10(shares);
+        double discriminant = 16129 + 2448 * logMultiplicand;
+        double squareRoot = Math.sqrt(discriminant);
+        double exponent = (-125 + squareRoot)/2;
+        double scaledValue = Math.pow(2, exponent);
+
+        int x = (int)scaledValue;
         if ( x <= PER_CPU_SHARES ) {
-            return PER_CPU_SHARES; // mimic cgroups v1
+            // Return the back-mapped value.
+            return x;
         }
         int f = x/PER_CPU_SHARES;
         int lower_multiple = f * PER_CPU_SHARES;
@@ -271,7 +262,7 @@ public class CgroupV2Subsystem implements CgroupSubsystem {
     @Override
     public long getMemoryLimit() {
         String strVal = CgroupSubsystemController.getStringValue(unified, "memory.max");
-        return limitFromString(strVal);
+        return CgroupSubsystem.limitFromString(strVal);
     }
 
     @Override
@@ -299,7 +290,7 @@ public class CgroupV2Subsystem implements CgroupSubsystem {
         if (strVal == null) {
             return getMemoryLimit();
         }
-        long swapLimit = limitFromString(strVal);
+        long swapLimit = CgroupSubsystem.limitFromString(strVal);
         if (swapLimit >= 0) {
             long memoryLimit = getMemoryLimit();
             assert memoryLimit >= 0;
@@ -330,7 +321,18 @@ public class CgroupV2Subsystem implements CgroupSubsystem {
     @Override
     public long getMemorySoftLimit() {
         String softLimitStr = CgroupSubsystemController.getStringValue(unified, "memory.low");
-        return limitFromString(softLimitStr);
+        return CgroupSubsystem.limitFromString(softLimitStr);
+    }
+
+    @Override
+    public long getPidsMax() {
+        String pidsMaxStr = CgroupSubsystemController.getStringValue(unified, "pids.max");
+        return CgroupSubsystem.limitFromString(pidsMaxStr);
+    }
+
+    @Override
+    public long getPidsCurrent() {
+        return getLongVal("pids.current");
     }
 
     @Override
@@ -345,13 +347,10 @@ public class CgroupV2Subsystem implements CgroupSubsystem {
     }
 
     private long sumTokensIOStat(Function<String, Long> mapFunc) {
-        try {
-            return CgroupUtil.readFilePrivileged(Paths.get(unified.path(), "io.stat"))
-                                .map(mapFunc)
-                                .collect(Collectors.summingLong(e -> e));
-        } catch (UncheckedIOException e) {
-            return CgroupSubsystem.LONG_RETVAL_UNLIMITED;
-        } catch (IOException e) {
+        try (Stream<String> lines = Files.lines(Path.of(unified.path(), "io.stat"))) {
+            return lines.map(mapFunc)
+                        .collect(Collectors.summingLong(e -> e));
+        } catch (UncheckedIOException | IOException e) {
             return CgroupSubsystem.LONG_RETVAL_UNLIMITED;
         }
     }
