@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2001, 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2001, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -48,6 +48,8 @@ class object001a {
 
     public static CheckedClass foo;
 
+    static Thread mainThread = null;
+
     public static void main(String args[]) {
 //        object001a _object001a = new object001a();
         System.exit(JCK_STATUS_BASE + run(args));
@@ -56,6 +58,7 @@ class object001a {
     static int run( String args[]) {
         ArgumentHandler argHandler = new ArgumentHandler(args);
         IOPipe pipe = argHandler.createDebugeeIOPipe();
+        mainThread = Thread.currentThread();
 
         // create instance of checked class
         foo = new CheckedClass();
@@ -172,28 +175,28 @@ class CheckedClass {
         X0  = new Class();
         X1  = new Class[]     {X0};
         X2  = new Class[][]   {X1};
-        Z0  = new Boolean(true);
+        Z0  = Boolean.valueOf(true);
         Z1  = new Boolean[]   {Z0};
         Z2  = new Boolean[][] {Z1};
-        B0  = new Byte(java.lang.Byte.MIN_VALUE);
+        B0  = Byte.valueOf(java.lang.Byte.MIN_VALUE);
         B1  = new Byte[]      {B0};
         B2  = new Byte[][]    {B1};
-        C0  = new Character(java.lang.Character.MIN_VALUE);
+        C0  = Character.valueOf(java.lang.Character.MIN_VALUE);
         C1  = new Character[] {C0};
         C2  = new Character[][]{C1};
-        D0  = new Double(java.lang.Double.MIN_VALUE);
+        D0  = Double.valueOf(java.lang.Double.MIN_VALUE);
         D1  = new Double[]    {D0};
         D2  = new Double[][]  {D1};
-        F0  = new Float(java.lang.Float.MIN_VALUE);
+        F0  = Float.valueOf(java.lang.Float.MIN_VALUE);
         F1  = new Float[]     {F0};
         F2  = new Float[][]   {F1};
-        I0  = new Integer(java.lang.Integer.MIN_VALUE);
+        I0  = Integer.valueOf(java.lang.Integer.MIN_VALUE);
         I1  = new Integer[]   {I0};
         I2  = new Integer[][] {I1};
-        L0  = new Long(java.lang.Long.MIN_VALUE);
+        L0  = Long.valueOf(java.lang.Long.MIN_VALUE);
         L1  = new Long[]      {L0};
         L2  = new Long[][]    {L1};
-        S0  = new Short(java.lang.Short.MIN_VALUE);
+        S0  = Short.valueOf(java.lang.Short.MIN_VALUE);
         S1  = new Short[]     {S0};
         S2  = new Short[][]   {S1};
         W0  = new String();
@@ -203,22 +206,22 @@ class CheckedClass {
         O1  = new Object[]    {O0};
         O2  = new Object[][]  {O1};
 
-        LS0 = new Long(java.lang.Long.MAX_VALUE);
+        LS0 = Long.valueOf(java.lang.Long.MAX_VALUE);
         LS1 = new Long[]      {LS0};
         LS2 = new Long[][]    {LS1};
-        LP0 = new Long(java.lang.Long.MAX_VALUE);
+        LP0 = Long.valueOf(java.lang.Long.MAX_VALUE);
         LP1 = new Long[]      {LP0};
         LP2 = new Long[][]    {LP1};
-        LU0 = new Long(java.lang.Long.MAX_VALUE);
+        LU0 = Long.valueOf(java.lang.Long.MAX_VALUE);
         LU1 = new Long[]      {LU0};
         LU2 = new Long[][]    {LU1};
-        LR0 = new Long(java.lang.Long.MAX_VALUE);
+        LR0 = Long.valueOf(java.lang.Long.MAX_VALUE);
         LR1 = new Long[]      {LR0};
         LR2 = new Long[][]    {LR1};
-        LT0 = new Long(java.lang.Long.MAX_VALUE);
+        LT0 = Long.valueOf(java.lang.Long.MAX_VALUE);
         LT1 = new Long[]      {LT0};
         LT2 = new Long[][]    {LT1};
-        LV0 = new Long(java.lang.Long.MAX_VALUE);
+        LV0 = Long.valueOf(java.lang.Long.MAX_VALUE);
         LV1 = new Long[]      {LV0};
         LV2 = new Long[][]    {LV1};
 
