@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2013, 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2013, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -21,24 +21,44 @@
  * questions.
  */
 
+/*
+ * @test
+ *
+ * @library /testlibrary/asm
+ * @library /vmTestbase /test/lib
+ *
+ * @comment build retransform.jar in current dir
+ * @run driver vm.runtime.defmeth.shared.BuildJar
+ *
+ * @run driver jdk.test.lib.FileInstaller . .
+ *
+ * @run main/othervm/native
+ *      -agentlib:redefineClasses
+ *      -javaagent:retransform.jar
+ *      vm.runtime.defmeth.StressTest
+ */
 package vm.runtime.defmeth;
 
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Random;
+
+import jdk.test.lib.thread.TestThreadFactory;
 import nsk.share.TestFailure;
 import nsk.share.test.StressOptions;
 import nsk.share.test.Stresser;
 import vm.runtime.defmeth.shared.Constants;
 import vm.runtime.defmeth.shared.DefMethTest;
 import vm.runtime.defmeth.shared.ExecutionMode;
-import vm.runtime.defmeth.shared.builder.TestBuilder;
 import vm.share.options.Option;
 import vm.share.options.OptionSupport;
 import vm.share.options.Options;
 import jdk.test.lib.Utils;
-import static jdk.internal.org.objectweb.asm.Opcodes.*;
+
+import static org.objectweb.asm.Opcodes.*;
+import static vm.runtime.defmeth.shared.DefMethTest.MAX_MAJOR_VER;
+import static vm.runtime.defmeth.shared.DefMethTest.MIN_MAJOR_VER;
 
 /*
  * Stress test for default methods implementation.
@@ -57,25 +77,24 @@ public class StressTest implements Runnable {
     @Option(name="seed", default_value="0", description="force deterministic behavior")
     private long seed;
 
-    @Option(name="redefine", default_value="false", description="use scenarios w/ class redefinition")
-    private boolean doRedefine;
-
-    @Option(name="ver", default_value="49", description="minimum class file version to be used in the tests")
-    private int minMajorVer;
+    @Option(name="noredefine", default_value="false", description="skip scenarios w/ class redefinition")
+    private boolean noRedefine;
 
     @Option(name="ignoreTestFailures", default_value="false", description="ignore failures of the executed tests")
     private boolean ignoreTestFailures;
 
-    class Worker extends Thread {
+    class Worker implements Runnable {
         private final Random rand;
 
         private volatile DefMethTest failedTest;
         private Throwable reason;
         private volatile long executedTests = 0;
 
-        public Worker(String id, long seed) {
-            setName(id);
-            this.rand = new Random(seed);
+        private final Thread thread;
+
+         Worker(String id, long seed) {
+             this.rand = new Random(seed);
+             this.thread = TestThreadFactory.newThread(this, id);
         }
 
         @Override
@@ -140,23 +159,18 @@ public class StressTest implements Runnable {
     }
 
     private void configureTests() {
-        int[] majorVerValues = new int[52 - minMajorVer + 1];
+        int[] majorVerValues = new int[MAX_MAJOR_VER - MIN_MAJOR_VER + 1];
         for (int i = 0; i< majorVerValues.length; i++) {
-            majorVerValues[i] = minMajorVer + i;
+            majorVerValues[i] = MIN_MAJOR_VER + i;
         }
 
-        int[] flagsValues = new int[] {
-            0,
-            ACC_STRICT,
-            ACC_SYNCHRONIZED,
-            ACC_STRICT | ACC_SYNCHRONIZED
-        };
+        int[] flagsValues = new int[] {0, ACC_SYNCHRONIZED};
 
         boolean[] doRedefineValues;
-        if (doRedefine) {
-            doRedefineValues = new boolean[] { true, false};
-        } else {
+        if (noRedefine) {
             doRedefineValues = new boolean[] { false };
+        } else {
+            doRedefineValues = new boolean[] { false, true };
         }
 
         // Upper limit for test count
@@ -188,20 +202,18 @@ public class StressTest implements Runnable {
                             }
 
                             try {
-                                DefMethTest test = testClass.newInstance();
+                                DefMethTest test = testClass.getDeclaredConstructor().newInstance();
 
                                 OptionSupport.setup(test, new String[] {
                                         "-execMode", mode.toString(),
                                         "-ver", Integer.toString(majorVer),
                                         "-flags", Integer.toString(flags),
                                         "-redefine", Boolean.toString(redefine),
-                                        "-ignoreCrashes",
-                                        "-ignoreKnownFailures",
                                         "-silent",
                                         "-failfast"});
 
                                 testlist.add(test);
-                            } catch (InstantiationException | IllegalAccessException ex) {
+                            } catch (ReflectiveOperationException ex) {
                                 throw new TestFailure(ex);
                             }
                         }
@@ -222,20 +234,6 @@ public class StressTest implements Runnable {
         System.out.printf("Seed: %d\n", seed);
         rand = new Random(seed);
 
-        //Workaround for the deadlock caused by
-        // JDK-7122142: "(ann) Race condition between isAnnotationPresent and getAnnotations"
-        try {
-            // Do a warm-up cycle
-            for (Class<? extends DefMethTest> testClass : DefMethTest.getTests()) {
-                DefMethTest test = testClass.newInstance();
-
-                OptionSupport.setupAndRun(test,
-                        new String[] { "-silent", "-ignoreKnownFailures"});
-            }
-        } catch(InstantiationException | IllegalAccessException e) {
-            throw new RuntimeException(e);
-        }
-
         int threadsCount = opts.getThreadsFactor();
         if (threadsCount == 1) {
             threadsCount = 5;
@@ -252,13 +250,13 @@ public class StressTest implements Runnable {
         }
 
         for (Worker worker : workers) {
-            worker.start();
+            worker.thread.start();
         }
     }
 
     private void interruptWorkers() {
         for (Worker worker : workers) {
-            worker.interrupt();
+            worker.thread.interrupt();
         }
     }
 
@@ -266,14 +264,14 @@ public class StressTest implements Runnable {
         boolean isFailed = false;
 
         for (Worker worker : workers) {
-            while (worker.isAlive()) {
+            while (worker.thread.isAlive()) {
                 try {
-                    worker.join();
+                    worker.thread.join();
                 } catch (InterruptedException e) {}
             }
 
             System.out.printf("%s: %s (executed: %d)\n",
-                    worker.getName(),
+                    worker.thread.getName(),
                     worker.isFailed() ? "FAILED: " + worker.getFailedTest() : "PASSED",
                     worker.getExecutedTests());
 
@@ -293,7 +291,7 @@ public class StressTest implements Runnable {
 
     private boolean workersAlive() {
         for (Worker worker : workers) {
-            if (!worker.isAlive()) {
+            if (!worker.thread.isAlive()) {
                 return false;
             }
         }
