@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2016, 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2016, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -21,33 +21,46 @@
  * questions.
  */
 
+import jdk.internal.util.ArraysSupport;
+
+import java.util.Arrays;
+
 /**
  * @test
- * @bug 8149330 8218227
+ * @bug 8149330 8218227 8351443
  * @summary Capacity should not get close to Integer.MAX_VALUE unless
  *          necessary
- * @requires (sun.arch.data.model == "64" & os.maxMemory >= 6G)
- * @run main/othervm -Xms5G -Xmx5G HugeCapacity
+ * @modules java.base/jdk.internal.util
+ * @requires (sun.arch.data.model == "64" & os.maxMemory >= 8G)
+ * @run main/othervm -Xms8G -Xmx8G -XX:-CompactStrings -Xlog:gc HugeCapacity false
+ * @run main/othervm -Xms8G -Xmx8G -XX:+CompactStrings -Xlog:gc HugeCapacity true
  */
 
 public class HugeCapacity {
     private static int failures = 0;
 
     public static void main(String[] args) {
-        testLatin1();
+        if (args.length == 0) {
+           throw new IllegalArgumentException("Need the argument");
+        }
+        boolean isCompact = Boolean.parseBoolean(args[0]);
+
+        testLatin1(isCompact);
         testUtf16();
         testHugeInitialString();
         testHugeInitialCharSequence();
+        testHugePlus(isCompact);
         if (failures > 0) {
             throw new RuntimeException(failures + " tests failed");
         }
     }
 
-    private static void testLatin1() {
+    private static void testLatin1(boolean isCompact) {
         try {
+            int divisor = isCompact ? 2 : 4;
             StringBuilder sb = new StringBuilder();
-            sb.ensureCapacity(Integer.MAX_VALUE / 2);
-            sb.ensureCapacity(Integer.MAX_VALUE / 2 + 1);
+            sb.ensureCapacity(Integer.MAX_VALUE / divisor);
+            sb.ensureCapacity(Integer.MAX_VALUE / divisor + 1);
         } catch (OutOfMemoryError oom) {
             oom.printStackTrace();
             failures++;
@@ -68,7 +81,7 @@ public class HugeCapacity {
 
     private static void testHugeInitialString() {
         try {
-            String str = "Z".repeat(Integer.MAX_VALUE - 8);
+            String str = "Z".repeat(ArraysSupport.SOFT_MAX_ARRAY_LENGTH);
             StringBuilder sb = new StringBuilder(str);
         } catch (OutOfMemoryError ignore) {
         } catch (Throwable unexpected) {
@@ -97,5 +110,24 @@ public class HugeCapacity {
             throw new UnsupportedOperationException();
         }
         public String toString() { return ""; }
+    }
+
+    // Test creating and appending the max size string for -XX:+CompactStrings and -XX:-CompactStrings
+    private static void testHugePlus(boolean isCompact) {
+        int repeatCount = (isCompact) ? Integer.MAX_VALUE / 2 - 1 : Integer.MAX_VALUE / 4 - 1;
+        char[] chars = new char[repeatCount];
+        char[] aChar = {'A', '\uff21'};
+        for (char ch : aChar) {
+            try {
+                int size = (ch > 0xff) ? repeatCount / 2 : repeatCount;
+                Arrays.fill(chars, 0, size, ch);
+                StringBuilder b = new StringBuilder(0);
+                b.append(chars, 0, size);
+                b.append(chars, 0, size);
+            } catch (Throwable unexpected) {
+                unexpected.printStackTrace();
+                failures++;
+            }
+        }
     }
 }
