@@ -35,18 +35,23 @@
  */
 
 /*
- * @test
- * @summary JSR-166 tck tests, in a number of variations.
- *          The first is the conformance testing variant,
- *          while others also test implementation details.
+ * @test id=default
+ * @summary Conformance testing variant of JSR-166 tck tests.
+ * @library /test/lib
  * @build *
- * @modules java.management
+ * @build jdk.test.lib.Platform
+ * @modules java.management java.base/jdk.internal.util
  * @run junit/othervm/timeout=1000 JSR166TestCase
- * @run junit/othervm/timeout=1000
- *      --add-opens java.base/java.util.concurrent=ALL-UNNAMED
- *      --add-opens java.base/java.lang=ALL-UNNAMED
- *      -Djsr166.testImplementationDetails=true
- *      JSR166TestCase
+ */
+
+/*
+ * @test id=forkjoinpool-common-parallelism
+ * @summary Test implementation details variant of JSR-166
+ *          tck tests with ForkJoinPool common parallelism.
+ * @library /test/lib
+ * @build *
+ * @build jdk.test.lib.Platform
+ * @modules java.management java.base/jdk.internal.util
  * @run junit/othervm/timeout=1000
  *      --add-opens java.base/java.util.concurrent=ALL-UNNAMED
  *      --add-opens java.base/java.lang=ALL-UNNAMED
@@ -60,7 +65,18 @@
  *      -Djava.util.concurrent.ForkJoinPool.common.parallelism=1
  *      -Djava.util.secureRandomSeed=true
  *      JSR166TestCase
- * @run junit/othervm/timeout=1000/policy=tck.policy
+ */
+
+/*
+ * @test id=others
+ * @summary Remaining test implementation details variant of
+ *          JSR-166 tck tests apart from ForkJoinPool common
+ *          parallelism.
+ * @library /test/lib
+ * @build *
+ * @build jdk.test.lib.Platform
+ * @modules java.management java.base/jdk.internal.util
+ * @run junit/othervm/timeout=1000
  *      --add-opens java.base/java.util.concurrent=ALL-UNNAMED
  *      --add-opens java.base/java.lang=ALL-UNNAMED
  *      -Djsr166.testImplementationDetails=true
@@ -82,13 +98,6 @@ import java.lang.management.ThreadMXBean;
 import java.lang.reflect.Constructor;
 import java.lang.reflect.Method;
 import java.lang.reflect.Modifier;
-import java.security.CodeSource;
-import java.security.Permission;
-import java.security.PermissionCollection;
-import java.security.Permissions;
-import java.security.Policy;
-import java.security.ProtectionDomain;
-import java.security.SecurityPermission;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
@@ -101,9 +110,11 @@ import java.util.Iterator;
 import java.util.List;
 import java.util.NoSuchElementException;
 import java.util.PropertyPermission;
+import java.util.Queue;
 import java.util.Set;
 import java.util.concurrent.BlockingQueue;
 import java.util.concurrent.Callable;
+import java.util.concurrent.CancellationException;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.CyclicBarrier;
 import java.util.concurrent.ExecutionException;
@@ -130,6 +141,7 @@ import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.regex.Pattern;
 
+import jdk.test.lib.Platform;
 import junit.framework.Test;
 import junit.framework.TestCase;
 import junit.framework.TestResult;
@@ -177,6 +189,11 @@ import junit.framework.TestSuite;
  * but even so, if there is ever any doubt, they can all be increased
  * in one spot to rerun tests on slower platforms.
  *
+ * Class Item is used for elements of collections and related
+ * purposes. Many tests rely on their keys being equal to ints. To
+ * check these, methods mustEqual, mustContain, etc adapt the JUnit
+ * assert methods to intercept ints.
+ *
  * <li>All threads generated must be joined inside each test case
  * method (or {@code fail} to do so) before returning from the
  * method. The {@code joinPool} method can be used to do this when
@@ -216,8 +233,6 @@ import junit.framework.TestSuite;
  * </ul>
  */
 public class JSR166TestCase extends TestCase {
-    private static final boolean useSecurityManager =
-        Boolean.getBoolean("jsr166.useSecurityManager");
 
     protected static final boolean expensiveTests =
         Boolean.getBoolean("jsr166.expensiveTests");
@@ -279,7 +294,7 @@ public class JSR166TestCase extends TestCase {
      * May be initialized from any of:
      * - the "jsr166.delay.factor" system property
      * - the "test.timeout.factor" system property (as used by jtreg)
-     *   See: http://openjdk.java.net/jtreg/tag-spec.html
+     *   See: https://openjdk.org/jtreg/tag-spec.html
      * - hard-coded fuzz factor when using a known slowpoke VM
      */
     private static final float delayFactor = delayFactor();
@@ -428,12 +443,8 @@ public class JSR166TestCase extends TestCase {
      * Runs all unit tests in the given test suite.
      * Actual behavior influenced by jsr166.* system properties.
      */
+    @SuppressWarnings("removal")
     static void main(Test suite, String[] args) {
-        if (useSecurityManager) {
-            System.err.println("Setting a permissive security manager");
-            Policy.setPolicy(permissivePolicy());
-            System.setSecurityManager(new SecurityManager());
-        }
         for (int i = 0; i < suiteRuns; i++) {
             TestResult result = newPithyTestRunner().doRun(suite);
             if (!result.wasSuccessful())
@@ -472,18 +483,8 @@ public class JSR166TestCase extends TestCase {
     public static final double JAVA_CLASS_VERSION;
     public static final String JAVA_SPECIFICATION_VERSION;
     static {
-        try {
-            JAVA_CLASS_VERSION = java.security.AccessController.doPrivileged(
-                new java.security.PrivilegedAction<Double>() {
-                public Double run() {
-                    return Double.valueOf(System.getProperty("java.class.version"));}});
-            JAVA_SPECIFICATION_VERSION = java.security.AccessController.doPrivileged(
-                new java.security.PrivilegedAction<String>() {
-                public String run() {
-                    return System.getProperty("java.specification.version");}});
-        } catch (Throwable t) {
-            throw new Error(t);
-        }
+        JAVA_CLASS_VERSION = Double.valueOf(System.getProperty("java.class.version"));
+        JAVA_SPECIFICATION_VERSION = System.getProperty("java.specification.version");
     }
 
     public static boolean atLeastJava6()  { return JAVA_CLASS_VERSION >= 50.0; }
@@ -497,7 +498,8 @@ public class JSR166TestCase extends TestCase {
     public static boolean atLeastJava14() { return JAVA_CLASS_VERSION >= 58.0; }
     public static boolean atLeastJava15() { return JAVA_CLASS_VERSION >= 59.0; }
     public static boolean atLeastJava16() { return JAVA_CLASS_VERSION >= 60.0; }
-    public static boolean atLeastJava17() { return JAVA_CLASS_VERSION >= 61.0; }
+    public static boolean atLeastJava19() { return JAVA_CLASS_VERSION >= 63.0; }
+    public static boolean atLeastJava20() { return JAVA_CLASS_VERSION >= 64.0; }
 
     /**
      * Collects all JSR166 unit tests as one suite.
@@ -562,7 +564,6 @@ public class JSR166TestCase extends TestCase {
             ScheduledExecutorSubclassTest.suite(),
             SemaphoreTest.suite(),
             SynchronousQueueTest.suite(),
-            SystemTest.suite(),
             ThreadLocalTest.suite(),
             ThreadPoolExecutorTest.suite(),
             ThreadPoolExecutorSubclassTest.suite(),
@@ -615,6 +616,29 @@ public class JSR166TestCase extends TestCase {
                 "ForkJoinPool9Test",
             };
             addNamedTestClasses(suite, java9TestClassNames);
+        }
+
+        if (atLeastJava19()) {
+            String[] java19TestClassNames = {
+                "ForkJoinPool19Test",
+            };
+            addNamedTestClasses(suite, java19TestClassNames);
+        }
+
+        if (atLeastJava20()) {
+            String[] java20TestClassNames = {
+                "ForkJoinPool20Test",
+                "SynchronousQueue20Test",
+                "ReentrantReadWriteLock20Test"
+            };
+
+            if (Platform.isS390x()) {
+                java20TestClassNames = new String[] {
+                    "ForkJoinPool20Test",
+                };
+            }
+
+            addNamedTestClasses(suite, java20TestClassNames);
         }
 
         return suite;
@@ -738,6 +762,7 @@ public class JSR166TestCase extends TestCase {
     /**
      * Returns a random element from given choices.
      */
+    @SuppressWarnings("unchecked")
     <T> T chooseRandomly(T... choices) {
         return choices[ThreadLocalRandom.current().nextInt(choices.length)];
     }
@@ -746,7 +771,7 @@ public class JSR166TestCase extends TestCase {
      * Returns the shortest timed delay. This can be scaled up for
      * slow machines using the jsr166.delay.factor system property,
      * or via jtreg's -timeoutFactor: flag.
-     * http://openjdk.java.net/jtreg/command-help.html
+     * https://openjdk.org/jtreg/command-help.html
      */
     protected long getShortDelay() {
         return (long) (50 * delayFactor);
@@ -821,7 +846,7 @@ public class JSR166TestCase extends TestCase {
      * by rethrowing, in the test harness thread, any exception recorded
      * earlier by threadRecordFailure.
      *
-     * Triggers test case failure if interrupt status is set in the main thread.
+     * Triggers test case failure if interrupted status is set in the main thread.
      */
     public void tearDown() throws Exception {
         Throwable t = threadFailure.getAndSet(null);
@@ -837,7 +862,7 @@ public class JSR166TestCase extends TestCase {
         }
 
         if (Thread.interrupted())
-            tearDownFail("interrupt status set in main thread");
+            tearDownFail("interrupted status set in main thread");
 
         checkForkJoinPoolThreadLeaks();
     }
@@ -1074,7 +1099,7 @@ public class JSR166TestCase extends TestCase {
     void joinPool(ExecutorService pool) {
         try {
             pool.shutdown();
-            if (!pool.awaitTermination(2 * LONG_DELAY_MS, MILLISECONDS)) {
+            if (!pool.awaitTermination(20 * LONG_DELAY_MS, MILLISECONDS)) {
                 try {
                     threadFail("ExecutorService " + pool +
                                " did not terminate in a timely manner");
@@ -1159,22 +1184,11 @@ public class JSR166TestCase extends TestCase {
      * Uninteresting threads are filtered out.
      */
     static void dumpTestThreads() {
-        SecurityManager sm = System.getSecurityManager();
-        if (sm != null) {
-            try {
-                System.setSecurityManager(null);
-            } catch (SecurityException giveUp) {
-                return;
-            }
-        }
-
         System.err.println("------ stacktrace dump start ------");
         for (ThreadInfo info : THREAD_MXBEAN.dumpAllThreads(true, true))
             if (threadOfInterest(info))
                 System.err.print(info);
         System.err.println("------ stacktrace dump end ------");
-
-        if (sm != null) System.setSecurityManager(sm);
     }
 
     /**
@@ -1212,14 +1226,14 @@ public class JSR166TestCase extends TestCase {
      * Checks that future.get times out, with the default timeout of
      * {@code timeoutMillis()}.
      */
-    void assertFutureTimesOut(Future future) {
+    void assertFutureTimesOut(Future<?> future) {
         assertFutureTimesOut(future, timeoutMillis());
     }
 
     /**
      * Checks that future.get times out, with the given millisecond timeout.
      */
-    void assertFutureTimesOut(Future future, long timeoutMillis) {
+    void assertFutureTimesOut(Future<?> future, long timeoutMillis) {
         long startTime = System.nanoTime();
         try {
             future.get(timeoutMillis, MILLISECONDS);
@@ -1227,8 +1241,9 @@ public class JSR166TestCase extends TestCase {
         } catch (TimeoutException success) {
         } catch (Exception fail) {
             threadUnexpectedException(fail);
-        } finally { future.cancel(true); }
+        }
         assertTrue(millisElapsedSince(startTime) >= timeoutMillis);
+        assertFalse(future.isDone());
     }
 
     /**
@@ -1253,132 +1268,134 @@ public class JSR166TestCase extends TestCase {
 
     /**
      * The number of elements to place in collections, arrays, etc.
+     * Must be at least ten;
      */
-    public static final int SIZE = 20;
+    public static final int SIZE = 32;
 
-    // Some convenient Integer constants
-
-    public static final Integer zero  = new Integer(0);
-    public static final Integer one   = new Integer(1);
-    public static final Integer two   = new Integer(2);
-    public static final Integer three = new Integer(3);
-    public static final Integer four  = new Integer(4);
-    public static final Integer five  = new Integer(5);
-    public static final Integer six   = new Integer(6);
-    public static final Integer seven = new Integer(7);
-    public static final Integer eight = new Integer(8);
-    public static final Integer nine  = new Integer(9);
-    public static final Integer m1  = new Integer(-1);
-    public static final Integer m2  = new Integer(-2);
-    public static final Integer m3  = new Integer(-3);
-    public static final Integer m4  = new Integer(-4);
-    public static final Integer m5  = new Integer(-5);
-    public static final Integer m6  = new Integer(-6);
-    public static final Integer m10 = new Integer(-10);
-
-    /**
-     * Runs Runnable r with a security policy that permits precisely
-     * the specified permissions.  If there is no current security
-     * manager, the runnable is run twice, both with and without a
-     * security manager.  We require that any security manager permit
-     * getPolicy/setPolicy.
-     */
-    public void runWithPermissions(Runnable r, Permission... permissions) {
-        SecurityManager sm = System.getSecurityManager();
-        if (sm == null) {
-            r.run();
-        }
-        runWithSecurityManagerWithPermissions(r, permissions);
+    static Item[] seqItems(int size) {
+        Item[] s = new Item[size];
+        for (int i = 0; i < size; ++i)
+            s[i] = new Item(i);
+        return s;
+    }
+    static Item[] negativeSeqItems(int size) {
+        Item[] s = new Item[size];
+        for (int i = 0; i < size; ++i)
+            s[i] = new Item(-i);
+        return s;
     }
 
-    /**
-     * Runs Runnable r with a security policy that permits precisely
-     * the specified permissions.  If there is no current security
-     * manager, a temporary one is set for the duration of the
-     * Runnable.  We require that any security manager permit
-     * getPolicy/setPolicy.
-     */
-    public void runWithSecurityManagerWithPermissions(Runnable r,
-                                                      Permission... permissions) {
-        SecurityManager sm = System.getSecurityManager();
-        if (sm == null) {
-            Policy savedPolicy = Policy.getPolicy();
-            try {
-                Policy.setPolicy(permissivePolicy());
-                System.setSecurityManager(new SecurityManager());
-                runWithSecurityManagerWithPermissions(r, permissions);
-            } finally {
-                System.setSecurityManager(null);
-                Policy.setPolicy(savedPolicy);
-            }
-        } else {
-            Policy savedPolicy = Policy.getPolicy();
-            AdjustablePolicy policy = new AdjustablePolicy(permissions);
-            Policy.setPolicy(policy);
+    // Many tests rely on defaultItems all being sequential nonnegative
+    public static final Item[] defaultItems = seqItems(SIZE);
 
-            try {
-                r.run();
-            } finally {
-                policy.addPermission(new SecurityPermission("setPolicy"));
-                Policy.setPolicy(savedPolicy);
-            }
-        }
+    static Item itemFor(int i) { // check cache for defaultItems
+        Item[] items = defaultItems;
+        return (i >= 0 && i < items.length) ? items[i] : new Item(i);
     }
 
-    /**
-     * Runs a runnable without any permissions.
-     */
-    public void runWithoutPermissions(Runnable r) {
-        runWithPermissions(r);
-    }
+    public static final Item zero  = defaultItems[0];
+    public static final Item one   = defaultItems[1];
+    public static final Item two   = defaultItems[2];
+    public static final Item three = defaultItems[3];
+    public static final Item four  = defaultItems[4];
+    public static final Item five  = defaultItems[5];
+    public static final Item six   = defaultItems[6];
+    public static final Item seven = defaultItems[7];
+    public static final Item eight = defaultItems[8];
+    public static final Item nine  = defaultItems[9];
+    public static final Item ten   = defaultItems[10];
 
-    /**
-     * A security policy where new permissions can be dynamically added
-     * or all cleared.
-     */
-    public static class AdjustablePolicy extends java.security.Policy {
-        Permissions perms = new Permissions();
-        AdjustablePolicy(Permission... permissions) {
-            for (Permission permission : permissions)
-                perms.add(permission);
-        }
-        void addPermission(Permission perm) { perms.add(perm); }
-        void clearPermissions() { perms = new Permissions(); }
-        public PermissionCollection getPermissions(CodeSource cs) {
-            return perms;
-        }
-        public PermissionCollection getPermissions(ProtectionDomain pd) {
-            return perms;
-        }
-        public boolean implies(ProtectionDomain pd, Permission p) {
-            return perms.implies(p);
-        }
-        public void refresh() {}
-        public String toString() {
-            List<Permission> ps = new ArrayList<>();
-            for (Enumeration<Permission> e = perms.elements(); e.hasMoreElements();)
-                ps.add(e.nextElement());
-            return "AdjustablePolicy with permissions " + ps;
-        }
-    }
+    public static final Item[] negativeItems = negativeSeqItems(SIZE);
 
-    /**
-     * Returns a policy containing all the permissions we ever need.
-     */
-    public static Policy permissivePolicy() {
-        return new AdjustablePolicy
-            // Permissions j.u.c. needs directly
-            (new RuntimePermission("modifyThread"),
-             new RuntimePermission("getClassLoader"),
-             new RuntimePermission("setContextClassLoader"),
-             // Permissions needed to change permissions!
-             new SecurityPermission("getPolicy"),
-             new SecurityPermission("setPolicy"),
-             new RuntimePermission("setSecurityManager"),
-             // Permissions needed by the junit test harness
-             new RuntimePermission("accessDeclaredMembers"),
-             new PropertyPermission("*", "read"),
-             new java.io.FilePermission("<<ALL FILES>>", "read"));
+    public static final Item minusOne   = negativeItems[1];
+    public static final Item minusTwo   = negativeItems[2];
+    public static final Item minusThree = negativeItems[3];
+    public static final Item minusFour  = negativeItems[4];
+    public static final Item minusFive  = negativeItems[5];
+    public static final Item minusSix   = negativeItems[6];
+    public static final Item minusSeven = negativeItems[7];
+    public static final Item minusEight = negativeItems[8];
+    public static final Item minusNone  = negativeItems[9];
+    public static final Item minusTen   = negativeItems[10];
+
+    // elements expected to be missing
+    public static final Item fortytwo = new Item(42);
+    public static final Item eightysix = new Item(86);
+    public static final Item ninetynine = new Item(99);
+
+    // Interop across Item, int
+
+    static void mustEqual(Item x, Item y) {
+        if (x != y)
+            assertEquals(x.value, y.value);
+    }
+    static void mustEqual(Item x, int y) {
+        assertEquals(x.value, y);
+    }
+    static void mustEqual(int x, Item y) {
+        assertEquals(x, y.value);
+    }
+    static void mustEqual(int x, int y) {
+        assertEquals(x, y);
+    }
+    static void mustEqual(Object x, Object y) {
+        if (x != y)
+            assertEquals(x, y);
+    }
+    static void mustEqual(int x, Object y) {
+        if (y instanceof Item)
+            assertEquals(x, ((Item)y).value);
+        else fail();
+    }
+    static void mustEqual(Object x, int y) {
+        if (x instanceof Item)
+            assertEquals(((Item)x).value, y);
+        else fail();
+    }
+    static void mustEqual(boolean x, boolean y) {
+        assertEquals(x, y);
+    }
+    static void mustEqual(long x, long y) {
+        assertEquals(x, y);
+    }
+    static void mustEqual(double x, double y) {
+        assertEquals(x, y);
+    }
+    static void mustContain(Collection<Item> c, int i) {
+        assertTrue(c.contains(itemFor(i)));
+    }
+    static void mustContain(Collection<Item> c, Item i) {
+        assertTrue(c.contains(i));
+    }
+    static void mustNotContain(Collection<Item> c, int i) {
+        assertFalse(c.contains(itemFor(i)));
+    }
+    static void mustNotContain(Collection<Item> c, Item i) {
+        assertFalse(c.contains(i));
+    }
+    static void mustRemove(Collection<Item> c, int i) {
+        assertTrue(c.remove(itemFor(i)));
+    }
+    static void mustRemove(Collection<Item> c, Item i) {
+        assertTrue(c.remove(i));
+    }
+    static void mustNotRemove(Collection<Item> c, int i) {
+        assertFalse(c.remove(itemFor(i)));
+    }
+    static void mustNotRemove(Collection<Item> c, Item i) {
+        assertFalse(c.remove(i));
+    }
+    static void mustAdd(Collection<Item> c, int i) {
+        assertTrue(c.add(itemFor(i)));
+    }
+    static void mustAdd(Collection<Item> c, Item i) {
+        assertTrue(c.add(i));
+    }
+    static void mustOffer(Queue<Item> c, int i) {
+        assertTrue(c.offer(itemFor(i)));
+    }
+    static void mustOffer(Queue<Item> c, Item i) {
+        assertTrue(c.offer(i));
     }
 
     /**
@@ -1456,7 +1473,7 @@ public class JSR166TestCase extends TestCase {
 
     /**
      * Spin-waits up to LONG_DELAY_MS milliseconds for the current thread to
-     * be interrupted.  Clears the interrupt status before returning.
+     * be interrupted.  Clears the interrupted status before returning.
      */
     void awaitInterrupted() {
         for (long startTime = 0L; !Thread.interrupted(); ) {
@@ -1496,11 +1513,20 @@ public class JSR166TestCase extends TestCase {
         checkTimedGet(f, expectedValue, LONG_DELAY_MS);
     }
 
+    // Avoids unwanted interrupts when run inder jtreg
+    static ThreadGroup topThreadGroup() {
+        for (ThreadGroup g = Thread.currentThread().getThreadGroup(), p; ; g = p)
+            if ((p = g.getParent()) == null)
+                return g;
+    }
+    static final ThreadGroup jsr166TestThreadGroup =
+        new ThreadGroup(topThreadGroup(), "jsr1666TestThreadGroup");
+
     /**
      * Returns a new started daemon Thread running the given runnable.
      */
     Thread newStartedThread(Runnable runnable) {
-        Thread t = new Thread(runnable);
+        Thread t = new Thread(jsr166TestThreadGroup, runnable);
         t.setDaemon(true);
         t.start();
         return t;
@@ -1520,10 +1546,12 @@ public class JSR166TestCase extends TestCase {
      * the thread (in the hope that it may terminate later) and fails.
      */
     void awaitTermination(Thread thread, long timeoutMillis) {
-        try {
-            thread.join(timeoutMillis);
-        } catch (InterruptedException fail) {
-            threadUnexpectedException(fail);
+        for (;;) { // ignore stray interrupts by test harness
+            try {
+                thread.join(timeoutMillis);
+                break;
+            } catch (InterruptedException ignore) {
+            }
         }
         if (thread.getState() != Thread.State.TERMINATED) {
             String detail = String.format(
@@ -1622,7 +1650,7 @@ public class JSR166TestCase extends TestCase {
         public void run() {}
     }
 
-    public static class NoOpCallable implements Callable {
+    public static class NoOpCallable implements Callable<Object> {
         public Object call() { return Boolean.TRUE; }
     }
 
@@ -1767,6 +1795,8 @@ public class JSR166TestCase extends TestCase {
         @Override protected final void compute() {
             try {
                 realCompute();
+            } catch (CancellationException ex) {
+                throw ex; // expected by some tests
             } catch (Throwable fail) {
                 threadUnexpectedException(fail);
             }
@@ -1782,6 +1812,8 @@ public class JSR166TestCase extends TestCase {
         @Override protected final T compute() {
             try {
                 return realCompute();
+            } catch (CancellationException ex) {
+                throw ex;
             } catch (Throwable fail) {
                 threadUnexpectedException(fail);
             }
@@ -1815,7 +1847,7 @@ public class JSR166TestCase extends TestCase {
         }
     }
 
-    void checkEmpty(BlockingQueue q) {
+    void checkEmpty(BlockingQueue<?> q) {
         try {
             assertTrue(q.isEmpty());
             assertEquals(0, q.size());
@@ -1862,6 +1894,7 @@ public class JSR166TestCase extends TestCase {
         }
     }
 
+    @SuppressWarnings("unchecked")
     void assertImmutable(Object o) {
         if (o instanceof Collection) {
             assertThrows(
@@ -2011,7 +2044,7 @@ public class JSR166TestCase extends TestCase {
             shouldThrow();
         } catch (NullPointerException success) {}
         try {
-            es.submit((Callable) null);
+            es.submit((Callable<?>) null);
             shouldThrow();
         } catch (NullPointerException success) {}
 
@@ -2023,7 +2056,7 @@ public class JSR166TestCase extends TestCase {
             shouldThrow();
         } catch (NullPointerException success) {}
         try {
-            ses.schedule((Callable) null,
+            ses.schedule((Callable<?>) null,
                          randomTimeout(), randomTimeUnit());
             shouldThrow();
         } catch (NullPointerException success) {}
@@ -2182,7 +2215,7 @@ public class JSR166TestCase extends TestCase {
         else {
             assertEquals(x.isEmpty(), y.isEmpty());
             assertEquals(x.size(), y.size());
-            assertEquals(new HashSet(x), new HashSet(y));
+            assertEquals(new HashSet<Object>(x), new HashSet<Object>(y));
             if (x instanceof Deque) {
                 assertTrue(Arrays.equals(x.toArray(), y.toArray()));
                 assertTrue(Arrays.equals(x.toArray(new Object[0]),
