@@ -1,12 +1,10 @@
 /*
- * Copyright (c) 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2020, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
  * under the terms of the GNU General Public License version 2 only, as
- * published by the Free Software Foundation.  Oracle designates this
- * particular file as subject to the "Classpath" exception as provided
- * by Oracle in the LICENSE file that accompanied this code.
+ * published by the Free Software Foundation.
  *
  * This code is distributed in the hope that it will be useful, but WITHOUT
  * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
@@ -41,7 +39,7 @@ import jdk.test.lib.jfr.Events;
  * @test
  * @summary Tests RedefinitionClasses event by redefining a class in a Java
  *          agent
- * @key jfr
+ * @requires vm.flagless
  * @requires vm.hasJFR
  * @library /test/lib /test/jdk
  * @modules java.instrument
@@ -81,7 +79,7 @@ public class TestRedefineClasses {
     public static void main(String[] args) throws Throwable {
         List<RecordedEvent> events = RecordingFile.readAllEvents(DUMP_PATH);
         Asserts.assertEquals(events.size(), 1, "Expected one RedefineClasses event");
-        RecordedEvent event = events.get(0);
+        RecordedEvent event = events.getFirst();
 
         System.out.println(event);
 
